--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,76 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* ccs for app */
+.app {
+  max-width: 600px;
+  width: 90%;
+  padding: 20px;
+  background-color: #162447; 
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+h1 {
+  font-size: 24px;
+  color: #ffffff;
+  margin-bottom: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* css for notification */
+
+.notifications-list {
+  margin: 20px 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.notification {
+  padding: 15px;
+  border: 1px solid #1f4068; 
+  border-radius: 5px;
+  margin-bottom: 10px;
+  background-color: #1f4068; 
+  color: #e0e0e0; 
+  text-align: left;
 }
 
-.card {
-  padding: 2em;
+.notification h2 {
+  font-size: 18px;
+  color: #e0e0e0;
+  margin-bottom: 5px;
 }
 
-.read-the-docs {
-  color: #888;
+.notification p {
+  font-size: 16px;
+  margin: 0 0 10px;
+}
+
+/* css for buttons */
+button {
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: opacity 0.3s;
+}
+
+button:hover {
+  opacity: 0.9;
+}
+
+button:active {
+  opacity: 0.8;
+}
+
+.notification button {
+  background-color: #e43f5a;
+  color: #ffffff;
+}
+
+.clear-all-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-top: 15px;
+  background-color: #e43f5a; 
+  color: #ffffff;
+  font-size: 16px;
 }
